overflow bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .MainPage {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .Menu {
@@ -25,7 +25,7 @@
   overflow: auto;
   left: 300px;
   right: 50px;
-  top: 600px;
+  top: 650px;
 }
 
 .body1 {
@@ -34,7 +34,7 @@
   overflow: auto;
   left: 300px;
   right: 50px;
-  top: 650px;
+  top: 750px;
 }
 
 .Slideshow {
